[Mac] Anchor profile switcher to left side of avatar button in RTL

BUG=647204,648559

Review-Url: https://codereview.chromium.org/2490323002
Cr-Commit-Position: refs/heads/master@{#432485}

Former-commit-id: 667b4c49949a49eb917a742fe629d7131ee03225