chrome/browser/ui/cocoa/profiles/avatar_base_controller.mm
@@ -19,6 +19,7 @@
 #include "chrome/browser/ui/browser_window.h"
 #import "chrome/browser/ui/cocoa/base_bubble_controller.h"
 #import "chrome/browser/ui/cocoa/browser_window_controller.h"
+#include "chrome/browser/ui/cocoa/l10n_util.h"
 #import "chrome/browser/ui/cocoa/profiles/avatar_menu_bubble_controller.h"
 #import "chrome/browser/ui/cocoa/profiles/profile_chooser_controller.h"
 #include "components/signin/core/common/profile_management_switches.h"
@@ -158,7 +159,9 @@ bool ProfileUpdateObserver::HasAvatarError() {
 
   // The new avatar bubble does not have an arrow, and it should be anchored
   // to the edge of the avatar button.
-  int anchorX = NSMaxX([anchor bounds]) - kMenuXOffsetAdjust;
+  int anchorX = cocoa_l10n_util::ShouldDoExperimentalRTLLayout()
+                    ? NSMinX([anchor bounds]) + kMenuXOffsetAdjust
+                    : NSMaxX([anchor bounds]) - kMenuXOffsetAdjust;
   NSPoint point = NSMakePoint(anchorX,
                               NSMaxY([anchor bounds]) + kMenuYOffsetAdjust);
   point = [anchor convertPoint:point toView:nil];
